--- a/cidr_convert_api/go/Dockerfile
+++ b/cidr_convert_api/go/Dockerfile
@@ -6,9 +6,10 @@ RUN apk add --update git
 WORKDIR /app
 
 COPY Goopfile Goopfile
-RUN go get github.com/Pepegasca/goop \
+RUN go get github.com/karmakaze/goop \
+    && go get github.com/gorilla/mux \
+    && go get github.com/stretchr/testify/assert \
     && goop install
-
 COPY . .
 CMD ["ash", "-c", "goop go run api.go convert.go"]
 # docker build -t gom .
