--- a/cidr_convert_api/go/Dockerfile
+++ b/cidr_convert_api/go/Dockerfile
@@ -16,4 +16,4 @@ CMD ["ash", "-c", "goop go run api.go convert.go"]
 
 # docker build -t gom .
 # docker run -ti -p 8000:8000 gom
-EXPOSE 8000
+#EXPOSE 8000
